test/good/automatic/base/without_input/ret_zero/0021.lat
// while

int main() {
  int i = 0;

  while(i < 10) {{{
    i++;
    if(i == 10) {
      printString("REACHED");
    }
  }}}

  while(true) {
    i++;
    if(i == 50) {
      printString("REACHED");
      return 0;
    }
  }

  return 1;
}