test/bad/automatic/base/compile_time/0046.lat
int main() {
    10 + 2 = 20;
    return 1;
}